<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always">
        <menu>
            <item
                android:title="@string/order_by"/>
            <item
                android:id="@+id/action_sort_more_new"
                android:title="@string/order_more_new"/>
            <item
                android:id="@+id/action_sort_relevancia"
                android:title="@string/order_relevancia"/>
            <item
                android:id="@+id/action_sort_less_price"
                android:title="@string/order_less_price"/>
            <item
                android:id="@+id/action_more_price"
                android:title="@string/order_more_price"/>
            <item
                android:id="@+id/action_calification"
                android:title="@string/order_calification"/>
        </menu>
    </item>
</menu>